Feature: recursive deleteEndpoint
Calling deleteEndPoint with recursive=true will send a disconnect to all sessions using the
endpoint, this allows the session to be reconnected to another endpoint
